forge-1.7.10-10.13.4.1614-1.7.10-src/.gradle/gradle.log
WARNING: You are using an unsupported version of ForgeGradle.
Please consider upgrading to ForgeGradle 4 and helping in the efforts to get old versions working on the modern toolchain.
See https://gist.github.com/TheCurle/fe7ad3ede188cbdd15c235cc75d52d4a for more info on contributing.
#################################################
         ForgeGradle 1.2.1-g1602004        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
Found AccessTransformer in main resources: a_at.cfg
:downloadClient SKIPPED
:downloadServer SKIPPED
:getVersionJson
:extractUserDev UP-TO-DATE
:mergeJars SKIPPED
:applyBinPatches
:downloadMcpTools SKIPPED
:extractMcpData UP-TO-DATE
:genSrgs SKIPPED
:deobfBinJar
Applying SpecialSource...
Applying Exceptor...
Stripping synthetics...
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
C:\Users\ealih\git\mcmodjava\forge-1.7.10-10.13.4.1614-1.7.10-src\build\sources\java\com\scripterae03\diplomka\ObsidianForgedHoe.java:24: error: unmappable character for encoding Cp1251
		info.add("¬ßb–ó–ê–ß–ï–ú –ù–ê–î–û –ë–´–õ–û –ï–ì–û –ö–†–ê–§–¢–?–¢–¨????");
		                                                            ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 warning

:processResources
:classes
:jar
:compileTestJava UP-TO-DATE
:processTestResources UP-TO-DATE
:testClasses UP-TO-DATE
:test UP-TO-DATE
:reobf
:assemble
:check UP-TO-DATE
:build

BUILD SUCCESSFUL

Total time: 34.874 secs
